updates on scores and additional info added to dsp_priority list

--- a/dsp_comparison/dsp_comparison_final.Rmd
+++ b/dsp_comparison/dsp_comparison_final.Rmd
@@ -36,6 +36,7 @@ library(UpSetR)
 library(splitstackshape)
 library(ggplot2)
 library(htmlwidgets)
+library(VennDiagram)
 })
 ```
 ### Part 1: Load datasets
@@ -625,58 +626,41 @@ g2 <- ggplot(pubpair_pair_acc_tm_eval[pair_check!="found only in one or two text
 g2
 ```
 
-##### Pair-id concordance estimations between interaction data and pathway resources
-```{r pubpair_acc_pw}
-pubpair_pair_acc_pw <- unique(pubpair_pair_acc_pt2[,
+
+##### Pair-id concordance estimations between interaction data and Reactome
+```{r pubpair_acc_reac}
+pubpair_pair_acc_reac <- unique(pubpair_pair_acc_pt2[,
                                              .(pmid,
                                                pair_id,
                                                pubpair_intdbs,
                                                pubpair_pw_reactome,
-                                               pubpair_pw_op = ifelse(
-                                                       pubpair_pw_op_ints=="1" | pubpair_pw_op_ptm == "1",
-                                                       "1",
-                                                       "0"
-                                                       ),
-                                               pub_pw_reactome,
-                                               pub_pw_op = ifelse(
-                                                       pub_pw_op_ints=="1" | pub_pw_op_ptm == "1",
-                                                       "1",
-                                                       "0"
-                                                       ))])
+                                               pub_pw_reactome)])
 
-pubpair_pair_acc_pw_eval_pt1 <- unique(pubpair_pair_acc_pw[pub_pw_reactome=="1" & pub_pw_op=="1" & pubpair_intdbs == "1",
+pubpair_pair_acc_reac_eval_pt1 <- unique(pubpair_pair_acc_reac[pub_pw_reactome=="1",
                                                                .(pmid,
                                                                  pair_id,
                                                                  pubpair_intdbs,
-                                                                 pubpair_pw_reactome,
-                                                                 pubpair_pw_op)])
+                                                                 pubpair_pw_reactome)])
 
-pubpair_pair_acc_pw_eval <- unique(pubpair_pair_acc_pw_eval_pt1[,
+pubpair_pair_acc_reac_eval <- unique(pubpair_pair_acc_reac_eval_pt1[,
                                                                 .(pmid,
                                                                   pair_id,
                                                                   pair_check = ifelse(
                                                                           pubpair_intdbs == "1" &
-                                                                                  pubpair_pw_reactome == "1" &
-                                                                                  pubpair_pw_op == "1",
-                                                                          "full agreement",
+                                                                                  pubpair_pw_reactome == "1",
+                                                                          "agreement",
                                                                           ifelse(
                                                                                   pubpair_intdbs == "1" &
-                                                                                  pubpair_pw_reactome == "1" &
-                                                                                  pubpair_pw_op == "0",
-                                                                                  "IntDBs + Reactome",
-                                                                                  ifelse(
-                                                                                          pubpair_intdbs == "1" &
-                                                                                                  pubpair_pw_reactome == "0" &
-                                                                                                  pubpair_pw_op == "1",
-                                                                                          "IntDBs + OmniPath",
-                                                                                          "Reactome + OmniPath"))))])
+                                                                                  pubpair_pw_reactome == "0",
+                                                                                  "IntDBs",
+                                                                                  "Reactome")))])
 
-table(pubpair_pair_acc_pw_eval$pair_check,useNA = "ifany")
+table(pubpair_pair_acc_reac_eval$pair_check,useNA = "ifany")
 ```
 
-###### Plot: Pair-id concordance estimations between interaction data and pathway resources
-```{r pubpair_acc_pw_plot,echo=FALSE,message=FALSE,warning=FALSE,fig.height=6}
-g3 <- ggplot(pubpair_pair_acc_pw_eval,
+###### Plot: Pair-id concordance estimations between interaction data and Reactome
+```{r pubpair_acc_reac_plot,echo=FALSE,message=FALSE,warning=FALSE,fig.height=6}
+g4 <- ggplot(pubpair_pair_acc_reac_eval,
             aes(x=pair_check,
                 fill=pair_check)) +
         geom_histogram(stat = "count") +
@@ -697,7 +681,23 @@ g3 <- ggplot(pubpair_pair_acc_pw_eval,
                axis.text.x = element_text(size = 12, angle = 45,vjust=0.5),
                axis.text.y = element_text(size = 12),
                axis.line = element_line())
-g3
+g4
+```
+```{r pubpair_acc_reac_plot_v2,echo=FALSE,message=FALSE,warning=FALSE,fig.height=6}
+pubpair_pair_acc_reac_stats <- unique(pubpair_pair_acc_reac_eval[,.(events = .N),by="pair_check"])
+
+venn.d = draw.pairwise.venn(area1 = as.numeric(pubpair_pair_acc_reac_stats[pair_check=="IntDBs"]$events), 
+                            area2 = as.numeric(pubpair_pair_acc_reac_stats[pair_check=="Reactome"]$events), 
+                            cross.area = as.numeric(pubpair_pair_acc_reac_stats[pair_check=="agreement"]$events), 
+                            category = c("IntDBs", "Reactome"), 
+                          lty = rep("blank", 2), 
+                          fill = c("blue", "red"), 
+                          alpha = rep(0.5, 2), cat.pos = c(0, 135), 
+                          cat.dist = rep(0.035, 2), 
+                          cat.cex = c(1,1), scaled = TRUE, euler.d = TRUE,  margin = 0.05,
+                          direct.area = TRUE,
+                          cex = 1)
+
 ```
 
 ********************************************************************************************
